# sid-note

./: .gitignore  Dockerfile  MUSIC_THEORY_FUNCTIONS.md  README.md  compose.yaml  jest.config.js  next.config.ts  nginx.conf  package-lock.json  package.json  track.schema.json  tsconfig.json
.claude/: CLAUDE.md  music-theory-wasm-rust-progress.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml
docs/: features.md  overview.md  platforms.md  roadmap.md  todo.md  user-guide.md
public/: robots.txt  sitemap.xml  track1.yaml
public/track/: setlist.yaml  track_1.yaml  track_11.yaml  track_2.yaml  track_21.yaml  track_22.yaml  track_3.yaml  track_31.yaml  track_32.yaml  track_33.yaml  track_34.yaml  track_4.yaml  track_41.yaml  track_5.yaml  track_51.yaml  track_6.yaml  track_61.yaml  track_71.yaml  track_81.yaml
rust-music/: .gitignore  Cargo.toml  README.md
rust-music/src/: lib.rs
rust-music/src/chord/: mod.rs  parser.rs  positions.rs
rust-music/src/core/: note.rs
rust-music/src/harmony/: cadence.rs  functional.rs  mod.rs
rust-music/src/scale/: diatonic.rs  mod.rs
rust-music/src/utils/: chord_alias.rs  chromatic.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/track/: CircleOfFifths.tsx  Keyboard.tsx  (+13 more)
src/models/: model.ts
src/schemas/: setlistSchema.ts  trackSchema.ts
src/utils/: chordNameAlias.ts  chordUtil.ts  chromaticUtil.ts  functionalHarmonyFilter.ts  harmonyUtil.ts  noteSoundPlayer.ts  noteUtil.ts  objectUtil.ts  remarkUtil.tsx  scaleUtil.ts  setlistLoader.ts  trackFilter.ts  trackLoader.ts  util.ts
(+30 files in other folders)
